2002-02-03  Bruno Haible  <bruno@clisp.org>

	* msginit.c (fill_header): Also replace "PACKAGE" in the comment.

2002-02-02  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (INCLUDES): Add -I../lib. Needed for builds with
	builddir != srcdir on platforms that don't have fnmatch and stdbool.h.

2002-01-31  Bruno Haible  <bruno@clisp.org>

	* gettext-0.11 released.

2002-01-31  Bruno Haible  <bruno@clisp.org>

	* plural-eval.h: Include eval-plural.h instead of plural-eval.c.

2002-01-30  Bruno Haible  <bruno@clisp.org>

	Make the gettext and ngettext programs independent of libgettextlib.
	* Makefile.am (gettext_LDADD, ngettext_LDADD): New variables.

2002-01-27  Bruno Haible  <bruno@clisp.org>

	* x-ycp.c (enum token_type_ty): New enum value token_type_symbol.
	(x_ycp_lex): Assign a value to tp->string if and only if the type is
	token_type_string_literal or token_type_symbol.
	(extract_ycp): Simplify cleanup.

2002-01-27  Bruno Haible  <bruno@clisp.org>

	* x-java.l (extract_java): Don't create a plural message if the
	function can take two string argument but actually has only one
	string argument.

2002-01-27  Bruno Haible  <bruno@clisp.org>

	* x-lisp.c (extract_lisp): Free memory allocated in toplevel_object.
	* x-elisp.c (string_of_object): Use memcpy.
	(extract_elisp): Free memory allocated in toplevel_object.
	* x-librep.c (string_of_object): Use memcpy.
	(extract_librep): Free memory allocated in toplevel_object.

2002-01-27  Bruno Haible  <bruno@clisp.org>

	* x-c.c (ALERT_CHAR): New macro.
	(phase7_getc): Accept \a and \v as well.

	* x-c.c (free_token): New inline function.
	(phase6_get): Use it.

2002-01-27  Bruno Haible  <bruno@clisp.org>

	* format-elisp.c (format_check): Don't use Java syntax for format
	argument number in error message.
	* format-librep.c (format_check): Likewise.
	* format-pascal.c (format_check): Likewise.

2002-01-24  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (LDADD): Use @LTLIBINTL@ instead of @INTLLIBS@.