@@ -1,5 +1,10 @@
 2002-02-03  Bruno Haible  <bruno@clisp.org>
 
+	* xgettext.c (finalize_header): New function.
+	(main): Call it.
+
+2002-02-03  Bruno Haible  <bruno@clisp.org>
+
 	* msginit.c (fill_header): Also replace "PACKAGE" in the comment.
 
 2002-02-02  Bruno Haible  <bruno@clisp.org>
